# rubiks-cube

./: .codespellignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGES.md  CLAUDE_TODO.md  Cargo.toml  LICENCE  Makefile  README.md  TODO.md  app.py  main.tex  minimal_app.py  packages.sty  pyproject.toml  references.bib  requirements.txt  simple_app.py  skeleton_finder.py  streamlit_app.py  title.tex  utils.py
.github/workflows/: build_push_acr.yml  ci.yml  flake8.yml  pre-commit.yml
.streamlit/: config.toml
Appendices/: Notation.tex
LaTeX-visulaizer/: main.tex
LaTeX-visulaizer/Sections/: OLL.tex
LaTeX-visulaizer/code/: print_box.py  utilities.py
LaTeX/Sections/: 3x3.tex
LaTeX/code/: OLL_print.py  set_state.py
Sections/: Competition.tex  DR.tex  FMC.tex  Insertions.tex  Introduction.tex  OLL.tex
code/: OLL_set.py  OLLs.py  permutations.py  print_reconstruction.py  reconstructions.py  reconstructions_3x3.py  reconstructions_FMC.py  reconstructions_speed.tex
cube_representations/: int_cube_state.py
cube_state/: cube_state.py  numba_cube_state.py
rubiks_cube/: __main__.py  app.py  configuration.py  htr_subsets.py  old_app.py  pages.py
rubiks_cube/attempt/: __init__.py
rubiks_cube/autotagger/: __init__.py  attempt.py  cubex.py  interface.py  pattern.py  step.py  subset.py  utils.py
rubiks_cube/beam_search/: __init__.py  interface.py  models.py  plan.py  solver.py  template.py
rubiks_cube/bindings/: __init__.py  bidirectional_search.py  rust.pyi
rubiks_cube/computation/: branching.py  heuristics.py
rubiks_cube/configuration/: __init__.py  enumeration.py  logging.py  path_definitions.py  paths.py  regex.py  type_definitions.py  types.py
rubiks_cube/cube_representations/: numba_cube_state.py  test_speed.py
rubiks_cube/experiments/: benchmark.py  solver_benchmark.py
rubiks_cube/fewest_moves/: __init__.py  attempt.py
rubiks_cube/fewest_moves/attempt/: __init__.py
rubiks_cube/formatting/: __init__.py  decorator.py  move.py  parsing.py  regex.py  string.py
rubiks_cube/graphics/: __init__.py  create_horisontal_figure.py  crete_svg_icon.py  horisontal.py  horizontal.py  plotting.py  svg_icon.py
rubiks_cube/group/: so3.py
rubiks_cube/heuristics/: __init__.py
rubiks_cube/math_utils/: branching.py
rubiks_cube/meta/: move.py
rubiks_cube/move/: __init__.py  algorithm.py  formatting.py  generator.py  meta.py  metrics.py  rotation_magic.py  scrambler.py  sequence.py  steps.py  utils.py
rubiks_cube/parsing/: __init__.py  decorator.py
rubiks_cube/permutation/: __init__.py  tracing.py  utils.py
rubiks_cube/representation/: __init__.py  mask.py  pattern.py  permutation.py  rotation.py  symmetries.py  utils.py
rubiks_cube/serialization/: converter.py  resources.py  utils.py
rubiks_cube/solver/: __init__.py  abc.py  actions.py  bidirectional_solver.py  branching.py  heuristics.py  interface.py  old_bidirectional_solvers.py  optimizers.py  pattern.py  pattern_solver.py  pattern_solver_v2.py  rotation.py  schreier_sims.py  search.py  slice_insertion.py  solver_abc.py  solver_v0.py  solver_v1.py  solver_v2.py  solver_v3.py  validators.py
rubiks_cube/solver/bidirectional/: __init__.py  alpha.py  beta.py  with_backtrack.py
rubiks_cube/solver/heuristics/: __init__.py
rubiks_cube/solver/ida_star/: __init__.py
rubiks_cube/solver/optimizer/: action.py  index.py
rubiks_cube/state/: __init__.py  mask.py  pattern.py  permutation.py  symmetries.py  tracing.py  utils.py
rubiks_cube/state/permutation/: __init__.py  tracing.py  utils.py
rubiks_cube/state/tag/: __init__.py  patterns.py
rubiks_cube/tag/: __init__.py  cubex.py  enumerations.py  patterns.py  simple_cubex.py  tracing.py
rubiks_cube/tools/: __init__.py  info.py  insertion_finder.py  sequence_shortner.py  skeleton_finder.py
rubiks_cube/tools/nissy/: __init__.py  nissy.py
rubiks_cube/transform/: action.py  cast.py  fused_index.py  index.py  interface.py  pipeline.py
rubiks_cube/utils/: __init__.py  enumerations.py  enums.py  formatter.py  formatting.py  metrics.py  move.py  parser.py  parsing.py  permutations.py  plotting.py  sequence.py  string.py  tag.py
src/: bidirectional_solver.rs  bubble_sort.rs  lib.rs
tests/: conftest.py  test_app_router.py
tests/attempt/: __init__.py  test_attempt.py
tests/autotagger/: test.py  test_attempt.py  test_cubex.py  test_init.py  test_pattern.py  test_tag.py
tests/beam_search/: test_beam_search.py
tests/computation/: test_branching.py  test_heuristics.py
tests/configuration/: test_regex.py
tests/fewest_moves/: __init__.py
tests/formatting/: test.py  test_decorator.py  test_init.py  test_parsing.py  test_regex.py  test_string.py
tests/group/: test_so3.py
tests/heuristics/: __init__.py
tests/math_utils/: test_heuristics.py
tests/meta/: test_move_meta.py
tests/move/: __init__.py  test.py  test_algorithm.py  test_forematting.py  test_generator.py  test_meta.py  test_metrics.py  test_scrambler.py  test_sequence.py  test_steps.py  test_try_cancel_moves_perf.py  test_utils.py
tests/parsing/: test.py  test_decorator.py  test_parsing.py  test_string.py
tests/representation/: test_mask.py  test_pattern.py  test_permutation.py  test_utils.py
tests/serialization/: test_converter.py  test_resources.py
tests/solver/: test_actions.py  test_bidirectional_solver.py  test_branching.py  test_heuristics.py  test_optimizers.py  test_rotation.py  test_schreier_sims.py  test_solver.py
tests/solver/heuristics/: test.py
tests/state/: test_mask.py  test_pattern.py  test_permutation.py
tests/tag/: test_cubex.py  test_patterns.py  test_tag.py
tests/transform/: test_fused_index.py  test_pipeline.py
tests/utils/: test_formatting.py  test_metrics.py
tools/: __init__.py  info.py  insertion_finder.py  nissy.py  sequence_shortner.py  skeleton_finder.py  slice.py
tools/nissy/: __init__.py  nissy.py
utils/: __init__.py  cube.py  formatter.py  languages.txt  move_formatter.py  permutations.py  plotting.py  rubiks_cube.py  sequence.py  string_formatter.py
utils/cube_state/: int_cube_state.py  test_speed.py
(+7 files in other folders)
