[tool.poetry]
name = "rubiks-cube"
version = "0.4.3"
description = "Rubik's Cube Solver and Analytics Engine."
authors = ["Tufte, Martin Gudahl"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.38.0"
numpy = "2.1.1"
matplotlib = "3.9.2"
pre-commit = "3.8.0"
mypy = "1.11.2"
black = "24.8.0"
st-annotated-text = "^4.0.1"
typer = "^0.12.5"
extra-streamlit-components = "0.1.71"
bidict = "^0.23.1"
pyvis = "^0.3.2"
python-json-logger = "^2.0.7"
ruff = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"

[tool.black]
line-length = 100
preview = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["SIM", "B", "C4", "FLY", "NPY", "PERF", "PL", "RUF", "YTT", "INP", "ERA", "TID", "TCH", "N", "D"]
ignore = [
    "B019",  # Use of cache may lead to memory leaks

    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D213",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "D413",  # Missing blank line after last section

    "N802",  # Function name should be lowercase
    "N803",  # Argument name should be lowercase

    "PLR0913",  # Too many arguments in a function
    "PLR2004",  # Magic value used in comparison
    "PLR0911",  # Too many return statements in a function
    "PLR0912",  # Too many branches in a function
    "PLR0915",  # Too many statements in a function

    "RUF001",  # String contain ambiguous characters
    "RUF101",

    "SIM102",  # Do not use nested if else statements
]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["rubiks_cube"]

[tool.mypy]
files = "rubiks_cube"
namespace_packages = true
explicit_package_bases = true
follow_imports = "normal"

# Report formatting
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

# Strictness
strict = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = [
    "annotated_text",
    "extra_streamlit_components",
    "pandas",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
