

[tool.black]
line-length = 100
preview = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["SIM", "B", "C4", "FLY", "NPY", "PERF", "PL", "RUF", "YTT", "INP", "ERA", "TID", "TCH", "N", "D"]
ignore = [
    "B019",  # Use of cache may lead to memory leaks

    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D213",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "D413",  # Missing blank line after last section

    "N802",  # Function name should be lowercase
    "N803",  # Argument name should be lowercase

    "PLR0913",  # Too many arguments in a function
    "PLR2004",  # Magic value used in comparison
    "PLR0911",  # Too many return statements in a function
    "PLR0912",  # Too many branches in a function
    "PLR0915",  # Too many statements in a function

    "RUF001",  # String contain ambiguous characters
    "RUF101",

    "SIM102",  # Do not use nested if else statements
]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["rubiks_cube"]

[tool.mypy]
files = "rubiks_cube"
exclude = ["tests/"]
namespace_packages = true
explicit_package_bases = true
follow_imports = "normal"

# Report formatting
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

# Strictness
strict = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = [
    "annotated_text.*",
    "extra_streamlit_components.*",
    "pythonjsonlogger.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rubiks_cube.configuration.logging"
disable_error_code = ["attr-defined"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rubiks-cube"
version = "0.4.4"
description = "Rubik's Cube Solver and Analytics Engine."
authors = [
    { name = "Tufte, Martin Gudahl" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.1.1",
    "matplotlib==3.9.2",
    "pre-commit==3.8.0",
    "mypy==1.11.2",
    "black==24.8.0",
    "st-annotated-text>=4.0.1",
    "typer>=0.12.5",
    "extra-streamlit-components==0.1.81",
    "bidict>=0.23.1",
    "pyvis>=0.3.2",
    "python-json-logger>=2.0.7",
    "ruff>=0.7.3",
    "streamlit>=1.50.0",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250809",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
    "types-requests>=2.32.4.20250913",
]
