

[tool.black]
line-length = 100
preview = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "SIM", "B", "C4", "FLY", "NPY", "PERF", "PL", "RUF", "YTT", "INP", "ERA", "TID", "TCH", "N"]
ignore = [
    "B019",  # Use of cache may lead to memory leaks

    "N802",  # Function name should be lowercase
    "N803",  # Argument name should be lowercase

    "PLR0913",  # Too many arguments in a function
    "PLR2004",  # Magic value used in comparison
    "PLR0911",  # Too many return statements in a function
    "PLR0912",  # Too many branches in a function
    "PLR0915",  # Too many statements in a function
    "PLW1641",  # Object does not implement __hash__ method

    "RUF001",  # String contain ambiguous characters
    "RUF101",  # Redirected noqa rule codes

    "SIM102",  # Do not use nested if else statements
]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["rubiks_cube"]


[tool.ty]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rubiks-cube"
version = "0.5.1"
description = "Rubik's Cube Solver and Analytics Engine."
authors = [
    { name = "Tufte, Martin Gudahl" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.1.1",
    "matplotlib==3.9.2",
    "pre-commit==3.8.0",
    "black==24.8.0",
    "attrs>=23.2.0",
    "typer>=0.12.5",
    "bidict>=0.23.1",
    "python-json-logger>=2.0.7",
    "ruff>=0.7.3",
    "ty>=0.0.1a23",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
]

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20250913",
]
app = [
    "streamlit>=1.50.0",
    "extra-streamlit-components==0.1.81",
    "st-annotated-text>=4.0.1",
]
experiments = [
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250809",
    "pyvis>=0.3.2",
]
